[package]
name = "seed15"
version = "0.1.4"
edition = "2021"
description = "general library for working with 15 word seed phrases"
license = "MIT"
repository = "https://github.com/DavidVorick/seed15"

[dependencies]
anyhow = "1.0"
ed25519-dalek = "1"
rand_core = "0.5"
sha2 = "0.10"
userspace-rng = "0.1"
